--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,21 @@
 <resources>
-    <string name="app_name">Sample Constraint Layout</string>
+    <string name="app_name">Activity 4</string>
     <string name="tEmail">Email</string>
     <string name="tPassword">Password</string>
     <string name="bsignin">Sign-In</string>
+
+    <string name="tData">Data Anda</string>
+    <string name="txEmail">Ini Hasil Email</string>
+    <string name="txPassword">Ini Hasil Password</string>
+    <string name="label2">Login Berhasil</string>
+    <string name="mDaftar">Daftar</string>
+    <string name="ldaftar">Daftar</string>
+    <string name="enama">Masukkan Nama</string>
+    <string name="eemail">Masukkan Email</string>
+    <string name="epass">Masukkan Password</string>
+    <string name="erepass">Masukkan Password Kembali</string>
+    <string name="ealamat">Masukkan Alamat</string>
+    <string name="lihatdata">Lihat Data</string>
+    <string name="editdata">Edit Data</string>
+
 </resources>
